<resources>
    <string name="app_name">Calculator:</string>
    <string name="action_settings">Settings:</string>
    <string name="addition">Addition:</string>
    <string name="subtraction">Subtraction:</string>
    <string name="multiplication">Multiplication:</string>
    <string name="calculate">Calculate:</string>
    <string name="result">Result:</string>
    <string name="first_number">First number:</string>
    <string name="second_number">Second number:</string>
    <string name="hint_number">eg 1234</string>
    <string name="title_maths_operation">Maths operation:</string>
</resources>
